<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_login_edittext"
            android:fontFamily="@font/reem_kufiink_regular"
            android:hint="@string/username"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="@id/guideline2" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_login_edittext"
            android:fontFamily="@font/reem_kufiink_regular"
            android:hint="@string/password"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/et_username" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:fontFamily="@font/reem_kufiink_regular"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_button_login"
            android:fontFamily="@font/reem_kufiink_regular"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
