<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F5F5">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/csl_avatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline_2"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline_1"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline_1">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintDimensionRatio="1:1"
                app:shapeAppearanceOverlay="@style/corner_radius"
                app:srcCompat="@drawable/ic_user" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/inner_vertical_guideline_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/inner_vertical_guideline_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/inner_horizontal_guideline_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.8" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_pick_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/inner_vertical_guideline_2"
                app:layout_constraintStart_toStartOf="@id/inner_vertical_guideline_1"
                app:layout_constraintTop_toTopOf="@id/inner_horizontal_guideline_1"
                app:shapeAppearanceOverlay="@style/corner_radius"
                app:srcCompat="@drawable/ic_camera" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@id/btn_register"
            app:layout_constraintTop_toBottomOf="@id/csl_avatar">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="7dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:text="INFOMATION" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.b18dccn562.finalproject.presentation.ui.NotificationTextView
                        android:id="@+id/ntv_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:ntv_text="@string/name" />

                    <com.b18dccn562.finalproject.presentation.ui.NotificationTextView
                        android:id="@+id/ntv_last_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:ntv_text="@string/last_name" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/reem_kufiink_regular"
                    android:text="@string/dob"
                    android:visibility="gone" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:fontFamily="@font/reem_kufiink_regular"
                        android:hint="@string/_00"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textCursorDrawable="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/reem_kufiink_regular"
                        android:text="@string/_source" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:fontFamily="@font/reem_kufiink_regular"
                        android:hint="@string/_00"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textCursorDrawable="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/reem_kufiink_regular"
                        android:text="@string/_source" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:fontFamily="@font/reem_kufiink_regular"
                        android:hint="@string/_2000"
                        android:inputType="number"
                        android:maxLength="4"
                        android:textCursorDrawable="@null" />
                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/reem_kufiink_regular"
                        android:text="@string/gender" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/rb_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/black"
                            android:checked="true"
                            android:fontFamily="@font/reem_kufiink_regular"
                            android:text="@string/male" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/rb_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/black"
                            android:text="@string/female" />

                    </RadioGroup>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:background="@drawable/bg_button_login"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline_2"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
